# fpt_app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pubspec.yaml  pyproject.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/fpt_app/: MainActivity.kt
app/: dependencies.py  main.py
app/core/: database.py  security.py
app/cruds/: event_crud.py  user_crud.py
app/models/: base_model.py  event_model.py  user_model.py  users_events_model.py
app/schemas/: event_schema.py  user_schema.py
app/v1/endpoints/: event_endpoints.py  users_endpoints.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: config.dart  main.dart
lib/models/: event.dart  user.dart
lib/screens/: calendar_screen.dart  events_list_screen.dart  home_screen.dart  login_screen.dart  user_screen.dart
lib/services/: api_service.dart  event_service.dart  token_service.dart  user_service.dart
lib/utils/: secure_storage_utils.dart
lib/widgets/: event_card.dart  event_dialog.dart  qr_dialog.dart  qr_scanner.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
